# archipelago-bot

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
bot/: __main__.py  config.py  helper.py  session_manager.py
bot/cogs/: admin_commands.py  session_commands.py
